--- a/0x00-Webpack/task_0/package.json
+++ b/0x00-Webpack/task_0/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "jQuery": "^1.7.4"
+    "jQuery": "^1.7.4",
+    "jquery": "^3.7.1"
   },
   "devDependencies": {
     "webpack": "^5.89.0",
