--- a/0x03-React_component/task_0/dashboard/package.json
+++ b/0x03-React_component/task_0/dashboard/package.json
@@ -1,22 +1,21 @@
 {
   "name": "dashboard",
   "version": "0.1.0",
-  "homepage": "http://Jarabi.github.io/alx-react",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^11.0.0",
     "@testing-library/user-event": "^13.5.0",
-    "prop-types": "^15.8.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "build": "webpack --mode production --config config/webpack.config.js",
-    "start": "webpack serve --open --mode development --config config/webpack.config.js",
-    "test": "jest",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "test-watch": "jest --watch"
   },
   "eslintConfig": {
@@ -39,15 +38,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.23.8",
     "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.9.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.7",
-    "gh-pages": "^6.1.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "i": "^0.3.7",
+    "image-webpack-loader": "^8.1.0",
+    "jest": "^27.5.1",
+    "npm": "^10.3.0",
+    "prop-types": "^15.8.1",
+    "style-loader": "^3.3.4",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
