--- a/0x03-React_component/task_1/dashboard/package.json
+++ b/0x03-React_component/task_1/dashboard/package.json
@@ -1,11 +1,13 @@
 {
   "name": "dashboard",
   "version": "0.1.0",
+  "homepage": "http://Jarabi.github.io/alx-react",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^11.0.0",
     "@testing-library/user-event": "^13.5.0",
+    "prop-types": "^15.8.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-scripts": "5.0.1",
@@ -13,6 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -38,31 +42,37 @@
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
+    "@babel/plugin-transform-modules-commonjs": "^7.23.3",
     "@babel/preset-env": "^7.23.8",
     "@babel/preset-react": "^7.23.3",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.9.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.7",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.6.0",
-    "i": "^0.3.7",
+    "gh-pages": "^6.1.1",
     "image-webpack-loader": "^8.1.0",
+    "inline-source-map": "^0.6.2",
     "jest": "^27.5.1",
-    "npm": "^10.3.0",
-    "prop-types": "^15.8.1",
+    "jsdom": "^23.2.0",
     "style-loader": "^3.3.4",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.10.0"
   },
   "jest": {
+    "testEnvironment": "jsdom",
+    "roots": [
+      "<rootDir>/src"
+    ],
     "setupFiles": [
       "<rootDir>/config/setupTests.js"
     ],
     "moduleNameMapper": {
-      "\\.(css|sass)$": "<rootDir>/__mocks__/styleMock.js",
+      "\\.(css|scss)$": "<rootDir>/__mocks__/styleMock.js",
       "\\.(jpg|jpeg|png|gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
     }
   }
